section with tailwind

--- a/public/profile.html
+++ b/public/profile.html
@@ -124,9 +124,16 @@
                     </div>
                 </div>
                 <form class=" lg:py-32 lg:w-3/5 lg:h-auto lg:ml-256 lg:absolute lg:mt-20 mt-6 m-5 rounded-t-lg">
-                    <div class="">
+                    <div class="lg:mt-4">
                         <h2 class="mt-10 box-content lg:w-224 lg:border-b-2 font-bold lg:-mt-80 lg:ml-96">Projects</h2>
-
+                        <section class="lg:-mt-14">
+                            <select name="projectlist" id="btn" class="btn h-8 w-32 md:w-40 lg:w-20 lg:ml-288 mt-4 border rounded-md bg-gray-100 border-gray-500">
+                            <option value="" selected>Sort</option>
+                            <option value=""><img src="./img/germany.png" alt="germany logo prefix">(+49)</option>
+                            <option value=""><img src="./img/italy.png" alt="italy logo prefix">(+46)</option>
+                            <option value=""><img src="./img/united-kingdom.png" alt="uk logo prefix">(+52)</option>
+                            </select>
+                        </section>
                     </div>
                 </form>
                 <form class=" lg:py-32 lg:ml-334 lg:w-1/5 lg:h-auto lg:-mt-0.5 lg:absolute lg:border-l-2 mt-6 m-5 rounded-t-lg">
